<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>nav2_trees</name>
  <version>0.1.0</version>
  <description>nav2 trees using py_trees.</description>

  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>
  <license>Apache License 2.0</license>

  <author email="naveedhd@gmail.com">Naveed Usmani</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>